New session is available to use