@@ -4,14 +4,17 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
+import java.util.ArrayList;
+import java.util.List;
+
 public class PoseQueueTest {
 
     private static final String POSE_NAME = "Pose 1";
-    private PoseQueue poseQueue;
+    private List<Pose> poseQueue;
 
     @Before
     public void setUp() {
-        poseQueue = new PoseQueue();
+        poseQueue = new ArrayList<>();
     }
 
     @Test
@@ -23,13 +26,13 @@ public class PoseQueueTest {
     @Test
     public void removeFirstItem() {
         poseQueue.add(new Pose(POSE_NAME));
-        poseQueue.removeFirst();
+        poseQueue.remove(0);
         Assert.assertEquals(0, poseQueue.size());
     }
 
     @Test
     public void removeReturnInfo() {
         poseQueue.add(new Pose(POSE_NAME));
-        Assert.assertEquals(POSE_NAME, poseQueue.removeFirst().getName());
+        Assert.assertEquals(POSE_NAME, poseQueue.remove(0).getName());
     }
 }
